# saico

./: Cargo.toml
addons/accounting/account/: Cargo.toml
addons/accounting/account/src/: lib.rs
addons/accounting/account_assets/: Cargo.toml
addons/accounting/account_assets/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
sql/: Cargo.toml
sql/src/: lib.rs
templates/: index.html.tera
