[package]
name = "server"
version = "0.1.0"
authors = ["Maher Khalil <maherkhalil@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql = {path = "../sql"}
account = {path = "../addons/accounting/account"}
account_assets = {path = "../addons/accounting/account_assets"}
rocket = "0.4.2"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates"]
